--- a/greensource_pages/templates/greensource_pages/about.html
+++ b/greensource_pages/templates/greensource_pages/about.html
@@ -22,17 +22,21 @@
     <div class="about-us row padding">
         <div class="col-lg-6">
             <p class="about">
-                 At Greensource Energy Consult, our aim is to offer quality solar products and standard delivery services, keeping an eye
+                 At Greensource Energy Consult, our goal is to offer quality solar products and standard delivery services, keeping an eye
                 on the latest trends in the industry, putting our customer’s wishes first. This is made possible by our team of young and
                 motivated engineers. We believe in great bargains and excellent service, which is why we commit ourselves to giving you the
-                best of both. <br/><br/>Greensource Energy Consult started as a small business in Ogun state, Nigeria on July 2018, founded by Olumide
-                Omogbule a graduate of Environmental Engineering from Obafemi Awolowo University. Driven with the passion to ensure a place
-                of comfort for homes and businesses. He earned several certifications in solar energy system training with sole purpose to
-                deliver quality on all installations, this in turn as yielded dividends.<br/><br/> Our goal is to deploy a continuous of providing
-                our customers with reliable products, standard installation procedures and best operations and maintenance practice needed
-                to ensure their solar energy system gives them value in return on their investment. Our customers are our top priority because
-                they are the reason we exist. Through our reliable services and standard of practice, we work hard and smart towards building
-                a long lasting and meaningful relationship with our customers with the mission of growing a community of Green energy users.
+                best of both.
+                <br/>
+                <br/>Greensource Energy Consult started as a small business in Ogun state, Nigeria on July 2018, founded by Olumide Omogbule a
+                graduate of Environmental Engineering from Obafemi Awolowo University. Driven with the passion to ensure a place of comfort
+                for homes and businesses. He earned several certifications in solar energy system training with sole purpose to deliver quality
+                on all installations, this in turn as yielded dividends.
+                <br/>
+                <br/> We are committed to deploy a continuous process of providing our customers with reliable products, standard installation
+                procedures and best operations and maintenance practice needed to ensure their solar energy system gives them value in return
+                on their investment. Our customers are our top priority because they are the reason we exist. Through our reliable services
+                and standard of practice, we work hard and smart towards building a long lasting and meaningful relationship with our customers
+                with the mission of growing a community of Green energy users.
             </p>
         </div>
         <div class="people wow fadeIn col-lg-6" data-wow-duration="4s" data-wow-delay="0.3s" data-wow-offset="10">
