--- a/greensource_pages/templates/greensource_pages/company-profile.html
+++ b/greensource_pages/templates/greensource_pages/company-profile.html
@@ -37,17 +37,23 @@
             <div>
                 <h5>INTRODUCTION</h5>
                 <h6>Company History</h6>
-                <p>Greensource Energy is an end-to-end, customer oriented, innovative green energy and management company providing
-                    cutting edge renewable energy solutions for residential, large and small businesses. Our aim is to design
-                    and install the best systems we can while offering value for money. Started in the year 2015 as an interest
-                    but established and Registered on the 14th of march 2019 as a professional renewable and alternative
-                    energy company.</p>
+                <p>At Greensource Energy Consult, our aim is to offer quality solar products and standard delivery services, keeping an eye
+                    on the latest trends in the industry, putting our customer’s wishes first. This is made possible by our team of young and
+                    motivated engineers. We believe in great bargains and excellent service, which is why we commit ourselves to giving you the
+                    best of both. <br/><br/>Greensource Energy Consult started as a small business in Ogun state, Nigeria on July 2018, founded by Olumide
+                    Omogbule a graduate of Environmental Engineering from Obafemi Awolowo University. Driven with the passion to ensure a place
+                    of comfort for homes and businesses. He earned several certifications in solar energy system training with sole purpose to
+                    deliver quality on all installations, this in turn as yielded dividends.<br/><br/> Our goal is to deploy a continuous of providing
+                    our customers with reliable products, standard installation procedures and best operations and maintenance practice needed
+                    to ensure their solar energy system gives them value in return on their investment. Our customers are our top priority because
+                    they are the reason we exist. Through our reliable services and standard of practice, we work hard and smart towards building
+                    a long lasting and meaningful relationship with our customers with the mission of growing a community of Green energy users.</p>
             </div>
             <div>
                 <h6>What the company does</h6>
-                <p>GreenSource Energy specializes in renewable energy involving solar energy system design and installation,
-                    electrical design and installation, HVAC design and installation, Energy audit/management, Project Management,
-                    and System maintenance.</p>
+                <p>GreenSource Energy specializes in renewable energy involving solar energy system design and installation for residential,
+                    commercial and utilities, Inverter Installation, solar lighting solutions, solar water pump solutions, energy storage,
+                    energy management, system evalaution and analysis, upgrade and mainten</p>
             </div>
             <div>
                 <h5>STRATEGY</h5>
@@ -143,7 +149,7 @@
             </div>
             <div>
                 <h6>Professionals & Advisors</h6>
-                <p>Engineer Francis Oludemi: - Solar Energy Engineer / Consultant
+                <p>Olumide Joseph: - Solar Energy Engineer / Consultant
                     <br />George Oluwaseun: – Environmental and Energy Manager</p>
                 </p>
             </div>
