--- a/greensource_pages/templates/greensource_pages/hvac.html
+++ b/greensource_pages/templates/greensource_pages/hvac.html
@@ -3,12 +3,12 @@
 menu-active
 {% endblock %}
 {% load static %}
-{% block title %}{{ block.super }} solar energy system upgrade {% endblock %}
+{% block title %}{{ block.super }} solar electrical installation {% endblock %}
 {% block content %}
 <div class="container-fluid padding">
     <div class="header row padding">
         <div class="col-12 animated fadeIn">
-            <h1>SOLAR ENERGY SYSTEM UPGRADE</h1>
+            <h1>ELECTRICAL INSTALLATION</h1>
         </div>
     </div>
 </div>
@@ -20,7 +20,7 @@ menu-active
         <li class="breadcrumb-item">
             <a href="{% url 'services' %}">Services</a>
         </li>
-        <li class="breadcrumb-item active">System Upgrade</li>
+        <li class="breadcrumb-item active">Electrical Installation</li>
     </ol>
 </nav>
 <div class="container-fluid padding">
@@ -34,11 +34,11 @@ menu-active
             <li class="list-group-item"><a href="{% url 'solar_water_pump' %}"><i class="fas fa-caret-right"></i> Solar Water Pump</a></li>
             <li class="list-group-item"><a href="{% url 'energy_management' %}"><i class="fas fa-caret-right"></i> Solar Storage</a></li>
             <li class="list-group-item"><a href="{% url 'project_management' %}"><i class="fas fa-caret-right"></i> Solar Energy Mgt</a></li>
-            <li class="list-group-item list-group-item-success"><a href="{% url 'hvac' %}"><i class="fas fa-caret-right"></i> Solar Upgrade</a></li>
-            <li class="list-group-item"><a href="{% url 'maintenance_service' %}"><i class="fas fa-caret-right"></i> Solar Maintenance</a></li>
+            <li class="list-group-item list-group-item-success"><a href="{% url 'hvac' %}"><i class="fas fa-caret-right"></i> Electrical Installation</a></li>
+            <li class="list-group-item"><a href="{% url 'maintenance_service' %}"><i class="fas fa-caret-right"></i> Upgrade / Maintenance</a></li>
         </ul>
         <div class="col-lg-8">
-            <img src="{% static 'images/inverter.webp' %}" alt="inverter" />
+            <img src="{% static 'images/ceiling-lamp.webp' %}" alt="inverter" />
         </div>
     </div>
 </div>
@@ -46,15 +46,13 @@ menu-active
     <div class="row details">
         <div>
             <p>
-                The upgrade of solar energy systems is becoming increasingly popular. Our solar energy system is designed to expand its
-                energy capacity as load demand rises. Customers who want to buy and install a higher-capacity solar energy system but can't
-                right now can start with a lower-capacity system and gradually increase their energy capacity over time, according to Greensource
-                Energy. Clients who wish to improve their system based on the efficiency of their previous solar energy system are also welcome
-                to do so. We're committed to increasing the production of renewable energy and ensuring its long-term viability. When compared
-                to a previous solar energy system, upgrading the solar energy system would enhance its overall design, achieve major improvements,
-                and increase output value. As a result, more renewable energy is produced, fossil fuel emissions are reduced, energy protection
-                is provided, and power production is increased in a highly efficient manner. This service choice is available to all customers,
-                both residential and commercial.
+                 You need people you can rely on when it comes to electrical installations. We have extensive experience at Greensource Energy
+                and are ready to work with you on your next project to offer a reliable, professional electrical installation.
+                <br/> We offer a wide range of electrical installation services, and our engineers adhere to the highest industry standards. we
+                are skilled in working at design level, through to commissioning, with the requirements of installing new as well as upgrading
+                existing light for Residential / Commercial buildings. We also give preventive maintenance services to our customers on a
+                regular basis. Within a property, our engineers do a series of checks and testing, offering recommendations and eliminating
+                any unnecessary downtime.
             </p>
         </div>
     </div>
@@ -62,17 +60,17 @@ menu-active
 <div class="container padding">
     <div class="row base">
         <div class="order-list col-lg-5 col-md-6 col-xs-12">
-            <h4>Our system upgrade includes:</h4>
+            <h4>Our Electrical service includes:</h4>
             <ol>
-                <li>Module Upgrade</li>
-                <li>Controller Upgrade</li>
-                <li>Inverter Upgrade</li>
-                <li>Battery Upgrade</li>
-                <li>Full system Upgrade</li>
+                <li>Security lighting</li>
+                <li>Complete light fitting</li>
+                <li>Wiring and re-wiring service</li>
+                <li>LV / MV design and installation</li>
+                <li>Lighting and socket point addition</li>
             </ol>
         </div>
         <div class="order-list col-lg-5 col-md-6 col-xs-12">
-            <img src="{% static 'images/system-upgrade.webp' %}" alt="solar system components" />
+            <img src="{% static 'images/electrical.webp' %}" alt="solar system components" />
         </div>
     </div>
 </div>
