--- a/greensource_pages/templates/greensource_pages/index.html
+++ b/greensource_pages/templates/greensource_pages/index.html
@@ -218,7 +218,7 @@ menu-active
                 <div class="single-service-style-one">
                     <div class="top-box">
                         <div class="inner-content">
-                            <i class="fas fa-solar-panel"></i>
+                            <i class="fas fa-hdd"></i>
                             <h3>
                                 <a href="{% url 'solar_design' %}">Inverter Installation</a>
                             </h3>
@@ -262,7 +262,7 @@ menu-active
                 <div class="single-service-style-one">
                     <div class="top-box">
                         <div class="inner-content">
-                            <i class="fas fa-water"></i>
+                            <i class="fas fa-solar-panel"></i>
                             <h3>
                                 <a href="{% url 'solar_design' %}">solar Water Pump</a>
                             </h3>
@@ -328,14 +328,14 @@ menu-active
                 <div class="single-service-style-one">
                     <div class="top-box">
                         <div class="inner-content">
-                            <i class="far fa-hdd"></i>
+                            <i class="fas fa-bolt"></i>
                             <h3>
-                                <a href="{% url 'hvac' %}">solar upgrade</a>
+                                <a href="{% url 'hvac' %}">Electrical Installation</a>
                             </h3>
                         </div>
                     </div>
                     <div class="image-block">
-                        <img src="{% static 'images/inverter.webp' %}" alt="stack of different inverter capacity" />
+                        <img src="{% static 'images/ceiling-lamp.webp' %}" alt="stack of different inverter capacity" />
                         <div class="overlay">
                             <div class="box">
                                 <div class="content">
@@ -350,9 +350,9 @@ menu-active
                 <div class="single-service-style-one">
                     <div class="top-box">
                         <div class="inner-content">
-                            <i class="fas fa-toolbox"></i>
+                            <i class="fas fa-tools"></i>
                             <h3>
-                                <a href="{% url 'maintenance_service' %}">solar maintenance</a>
+                                <a href="{% url 'maintenance_service' %}">upgrade / maintenance</a>
                             </h3>
                         </div>
                     </div>
