--- a/greensource_pages/templates/greensource_pages/maintenance-service.html
+++ b/greensource_pages/templates/greensource_pages/maintenance-service.html
@@ -8,7 +8,7 @@ menu-active
 <div class="container-fluid padding">
     <div class="header row padding">
         <div class="col-12 animated fadeIn">
-            <h1>SOLAR ENERGY SYSTEM MAINTENANCE</h1>
+            <h1>SOLAR UPGRADE / MAINTENANCE</h1>
         </div>
     </div>
 </div>
@@ -20,7 +20,7 @@ menu-active
         <li class="breadcrumb-item">
             <a href="{% url 'services' %}">Services</a>
         </li>
-        <li class="breadcrumb-item active">Retrofit-Maintenance</li>
+        <li class="breadcrumb-item active">Upgrade-Maintenance</li>
     </ol>
 </nav>
 <div class="container-fluid padding">
@@ -34,8 +34,8 @@ menu-active
             <li class="list-group-item"><a href="{% url 'solar_water_pump' %}"><i class="fas fa-caret-right"></i> Solar Water Pump</a></li>
             <li class="list-group-item"><a href="{% url 'energy_management' %}"><i class="fas fa-caret-right"></i> Solar Storage</a></li>
             <li class="list-group-item"><a href="{% url 'project_management' %}"><i class="fas fa-caret-right"></i> Solar Energy Mgt</a></li>
-            <li class="list-group-item"><a href="{% url 'hvac' %}"><i class="fas fa-caret-right"></i> Solar Upgrade</a></li>
-            <li class="list-group-item list-group-item-success"><a href="{% url 'maintenance_service' %}"><i class="fas fa-caret-right"></i> Solar Maintenance</a></li>
+            <li class="list-group-item"><a href="{% url 'hvac' %}"><i class="fas fa-caret-right"></i> Electrical Installation</a></li>
+            <li class="list-group-item list-group-item-success"><a href="{% url 'maintenance_service' %}"><i class="fas fa-caret-right"></i> Upgrade / Maintenance</a></li>
         </ul>
         <div class="cut col-lg-8">
             <img src="{% static 'images/maintenance.webp' %}" />
@@ -45,42 +45,41 @@ menu-active
 <div class="container padding">
     <div class="row details">
         <div>
-            <p>All of the solar services we provide require maintenance (after sales support and services). We have a team of qualified
-                solar energy technicians on hand to deal with any maintenance problems. Maintenance is needed for dependable and long-term
-                energy output, as well as to ensure your system's optimal efficiency. Preventive and corrective maintenance are two forms
-                of maintenance that we plan for our customers. Preventive maintenance is performed on systems that are still in use and
-                are not expected to fail until being repaired. When a device reaches the point of failure before being repaired, it is
-                subjected to corrective maintenance. All of our installations need maintenance to ensure that they last as long as possible
-                and that they are running at peak performance. Cleaning solar panels, removing bad wires, cleaning batteries and replacing
-                battery fluid for tubular batteries, air pressure cleaning of electrical components, and ensuring all cables are firmly
-                fastened to their terminals are only a few of the maintenance tasks we conduct.
+            <p>We're committed to increasing the production of renewable energy and ensuring its long-term viability, hence our solar energy
+            system is designed to expand its energy capacity as load demand rises. We have a team of qualified solar energy technicians
+            on hand to attend to any upgrade and or maintenance of solar systems. Maintenance is needed for dependable and long-term
+            energy output, as well as to ensure your system's optimal efficiency. Preventive and corrective maintenance are two forms
+            of maintenance that we plan for our customers. We advice that all installations be subject maintenance to ensure that they
+            last as long as possible and that they are running at peak performance. Cleaning solar panels, removing spent/burnt wires,
+            cleaning batteries and replacing battery fluid for tubular batteries, air pressure cleaning of electrical components, and
+            ensuring all cables are firmly fastened to their terminals are only a few of the maintenance tasks we conduct.
             </p>
         </div>
     </div>
     <div class="system-main row padding">
         <div class="col-lg-5 col-sm-6 system">
-            <h4>maintenance</h4>
+            <h4>Upgrade</h4>
             <p>our scope of work includes</p>
             <ol>
-                <li>Module Cleaning</li>
-                <li>Inverter servicing</li>
-                <li>component Replacement</li>
-                <li>Wear and tears Repairs</li>
-                <li>Solar system maintenance</li>
-                <li>Monitoring and Calibration</li>
+                <li>Retrofitting</li>
+                <li>Inverter Upgrade</li>
+                <li>Electrical isolation</li>
+                <li>Module wattage Addition</li>
+                <li>Complete system Upgrade</li>
+                <li>Storage Capacity increase</li>
+                <li>Controller capacity increase</li>
             </ol>
         </div>
         <div class="col-lg-5 col-sm-6 system">
-            <h4>Retrofitting</h4>
+            <h4>Maintenance</h4>
             <p>our scope of work includes</p>
             <ol>
-                <li>Repair</li>
-                <li>Upgrade</li>
-                <li>Maintenance</li>
-                <li>Consultation</li>
-                <li>Modification</li>
+                <li>Module Cleaning</li>
                 <li>Re-Installation</li>
-                <li>Customer Support</li>
+                <li>Inverter servicing</li>
+                <li>System Modification</li>
+                <li>component Replacement</li>
+                <li>Distribution board inspection</li>
                 <li>Electrical system troubleshooting</li>
             </ol>
         </div>
