--- a/greensource_pages/templates/greensource_pages/off-grid-solar.html
+++ b/greensource_pages/templates/greensource_pages/off-grid-solar.html
@@ -30,8 +30,8 @@ menu-active
             <li class="list-group-item"><a href="{% url 'solar_water_pump' %}"><i class="fas fa-caret-right"></i> Solar Water Pump</a></li>
             <li class="list-group-item"><a href="{% url 'energy_management' %}"><i class="fas fa-caret-right"></i> Solar Storage</a></li>
             <li class="list-group-item"><a href="{% url 'project_management' %}"><i class="fas fa-caret-right"></i> Solar Energy Mgt</a></li>
-            <li class="list-group-item"><a href="{% url 'hvac' %}"><i class="fas fa-caret-right"></i> Solar Upgrade</a></li>
-            <li class="list-group-item"><a href="{% url 'maintenance_service' %}"><i class="fas fa-caret-right"></i> Solar Maintenance</a></li>
+            <li class="list-group-item"><a href="{% url 'hvac' %}"><i class="fas fa-caret-right"></i> Electrical Installation</a></li>
+            <li class="list-group-item"><a href="{% url 'maintenance_service' %}"><i class="fas fa-caret-right"></i> Upgrade / Maintenance</a></li>
         </ul>
         <div class="col-lg-8">
             <img src="{% static 'images/Inverter.webp' %}" alt="inverter image" />
@@ -42,18 +42,14 @@ menu-active
         <div class="row details">
             <div>
                 <p>
-                     We design and build solar panels for off-grid applications where there is no access to a conventional power grid. This application
-                    is planned for rural areas and farms without access to the national grid. Solar panels are designed to produce more than
-                    enough energy, which is then stored in a battery for later use, primarily at night. To meet the energy demand, we make sure
-                    our off-grid infrastructure is well-designed and sized to handle cloudy and rainy days. We provide technical assistance and
-                    work hard to reach out to customers directly through one-on-one sales and a variety of other approaches, such as phone consultations,
-                    to provide acceptable solutions. We are committed to providing the best customer service in terms of both product performance,
-                    pricing options, ensuring you can truly customize your system with desired specification that meet or exceed all goals. Our
-                    aim is always for our customer's financial satisfaction, while ensuring we can achieve thier long-term energy goals and return
-                    on investment in areas not connected to the grid. We are dedicated to delivering the best customer experience possible in
-                    terms of product performance and pricing choices, ensuring that you can fully tailor your system to meet or exceed your objectives.
-                    Our mission is to provide financial satisfaction to our customers while also ensuring that we can meet their long-term energy
-                    goals and provide a return on investment in non-grid areas.
+                    We render inverter installation services for clients who like this option in a unique way with our wll trained professionals
+                    who are experienced in the the design and installation of inverter for residential and commercial purposes. We believe that
+                    total customer satisfaction is achieved when a good quality product supported by a responsive after sales support and maintenance
+                    service. We boast of well trained reliable engineers to give the necessary support for operations of all our inverter systems.our
+                    services start from site inspection, load /energy analysis, installation, operations and maintenance. We work very close
+                    with our customers to dermine the type and capacity of inverter needed taking into consideration the load the inverter will
+                    be powering, usage condition, gadget/appliance priority and budget. We recommend usage of our inverters as adviced by our
+                    engineers to ensure you get the most out of your inverter and keep them running optimally while preserving battery life.
                 </p>
             </div>
         </div>
@@ -61,7 +57,7 @@ menu-active
 <div class="container-fluid padding">
         <div class="row base">
             <div class="order-list col-lg-5 col-md-6 col-xs-12">
-                <h4>Our Inveter service includes:</h4>
+                <h4>Our Inverter service includes:</h4>
                 <ol>
                         <li>Operations</li>
                         <li>Maintenance</li>
@@ -71,7 +67,7 @@ menu-active
                 </ol>
             </div>
             <div class="order-list col-lg-5 col-md-6 col-xs-12">
-                <img src="{% static 'images/slider-img.webp' %}" alt="solar panel installation" />
+                <img src="{% static 'images/inverter2.webp' %}" alt="solar panel installation" />
             </div>
         </div>
 </div>
