--- a/greensource_pages/templates/greensource_pages/service-detail.html
+++ b/greensource_pages/templates/greensource_pages/service-detail.html
@@ -31,8 +31,8 @@ menu-active
             <li class="list-group-item"><a href="{% url 'solar_water_pump' %}"><i class="fas fa-caret-right"></i> Solar Water Pump</a></li>
             <li class="list-group-item"><a href="{% url 'energy_management' %}"><i class="fas fa-caret-right"></i> Solar Storage</a></li>
             <li class="list-group-item"><a href="{% url 'project_management' %}"><i class="fas fa-caret-right"></i> Solar Energy Mgt</a></li>
-            <li class="list-group-item"><a href="{% url 'hvac' %}"><i class="fas fa-caret-right"></i> Solar Upgrade</a></li>
-            <li class="list-group-item"><a href="{% url 'maintenance_service' %}"><i class="fas fa-caret-right"></i> Solar Maintenance</a></li>
+            <li class="list-group-item"><a href="{% url 'hvac' %}"><i class="fas fa-caret-right"></i> Electrical Installation</a></li>
+            <li class="list-group-item"><a href="{% url 'maintenance_service' %}"><i class="fas fa-caret-right"></i> Upgrade / Maintenancee</a></li>
         </ul>
         <div class="services-details col-lg-8 col-md-7 col-xs-12">
             <img src="{% static 'images/simulation.gif' %}" />
