--- a/templates/base_layout.html
+++ b/templates/base_layout.html
@@ -223,7 +223,7 @@
                             <a href='ma&#105;lto&#58;hel%6C%&#54;F&#64;gr&#37;6&#53;e%&#54;&#69;&#115;%6F&#117;r%&#54;3e&#37;&#54;&#69;ergy&#46;co%6D'>hell&#111;&#64;&#103;reens&#111;ur&#99;energy&#46;com</a>
                         </p>
                         <i class="fas fa-phone"></i>
-                        <p>(234)802-9442-697 <br /> (234)807 6068 609</p>
+                        <p>(234)802-9442-697 <br /> (234)807-6068-609</p>
                     </div>
                     <div class="social">
                         <h6>/ FOLLOW US ON</h6>
@@ -333,11 +333,11 @@
       "enabled":true,
       "chatButtonSetting":{
           "backgroundColor":"#006420",
-          "ctaText":"Message Us",
+          "ctaText":"",
           "borderRadius":"25",
           "marginLeft":"0",
-          "marginBottom":"0",
-          "marginRight":"5",
+          "marginBottom":"55",
+          "marginRight":"10",
           "position":"right"
       },
       "brandSetting":{
@@ -347,7 +347,7 @@
           "welcomeText":"Hello!\nHow can we help you today?",
           "messageText":"Hello, I have a question.",
           "backgroundColor":"#006420",
-          "ctaText":"Send",
+          "ctaText":"Send Message",
           "borderRadius":"25",
           "autoShow":false,
           "phoneNumber":"2348029442697"
