--- a/greensource_pages/templates/greensource_pages/services.html
+++ b/greensource_pages/templates/greensource_pages/services.html
@@ -8,7 +8,7 @@ menu-active
 <div class="container-fluid padding">
     <div class="header row padding">
         <div class="col-12 animated fadeIn">
-            <h1>SOLAR ENERGY SERVICES</h1>
+            <h1>OUR SOLAR SERVICES</h1>
         </div>
     </div>
 </div>
@@ -71,7 +71,7 @@ menu-active
                 <div class="single-service-style-one wow fadeIn" data-wow-duration="3s" data-wow-delay="0.2s" data-wow-offset="10">
                     <div class="top-box">
                         <div class="inner-content">
-                            <i class="fas fa-solar-panel"></i>
+                            <i class="fas fa-hdd"></i>
                             <h3>
                                 <a href="{% url 'off_grid_solar' %}">Inverter installation</a>
                             </h3>
@@ -115,7 +115,7 @@ menu-active
                 <div class="single-service-style-one wow fadeIn" data-wow-duration="3s" data-wow-delay="0.2s" data-wow-offset="10">
                     <div class="top-box">
                         <div class="inner-content">
-                            <i class="fas fa-water"></i>
+                            <i class="fas fa-solar-panel"></i>
                             <h3>
                                 <a href="{% url 'solar_water_pump' %}">Solar water pump</a>
                             </h3>
@@ -182,14 +182,14 @@ menu-active
                 <div class="single-service-style-one wow fadeIn" data-wow-duration="6s" data-wow-delay="0.2s" data-wow-offset="10">
                     <div class="top-box">
                         <div class="inner-content">
-                            <i class="fas fa-hdd"></i>
+                            <i class="fas fa-bolt"></i>
                             <h3>
-                                <a href="{% url 'hvac' %}">solar upgrade</a>
+                                <a href="{% url 'hvac' %}">Electrical Installation</a>
                             </h3>
                         </div>
                     </div>
                     <div class="image-block">
-                        <img src="{% static 'images/inverter.webp' %}" alt="solar inverter" />
+                        <img src="{% static 'images/ceiling-lamp.webp' %}" alt="solar inverter" />
                         <div class="overlay">
                             <div class="box">
                                 <div class="content">
@@ -206,7 +206,7 @@ menu-active
                         <div class="inner-content">
                             <i class="fas fa-tools"></i>
                             <h3>
-                                <a href="{% url 'maintenance_service' %}">solar maintenance</a>
+                                <a href="{% url 'maintenance_service' %}">Upgrade / Maintenance</a>
                             </h3>
                         </div>
                     </div>
