--- a/greensource_pages/templates/greensource_pages/index.html
+++ b/greensource_pages/templates/greensource_pages/index.html
@@ -78,7 +78,7 @@ menu-active
                 <i class="fas fa-headset"></i>
             </div>
             <h6>24/7 support (234)</h6>
-            <p>802-9442-697, 807 6068 609.</p>
+            <p>802-9442-697, 807-6068-609.</p>
         </div>
     </div>
 </div>
@@ -225,7 +225,7 @@ menu-active
                         </div>
                     </div>
                     <div class="image-block">
-                        <img src="{% static 'images/Inverter.webp' %}" alt="installed rooftop monocrystalline panels" />
+                        <img src="{% static 'images/inverter.webp' %}" alt="installed rooftop monocrystalline panels" />
                         <div class="overlay">
                             <div class="box">
                                 <div class="content">
@@ -890,7 +890,7 @@ menu-active
         {% endfor %}
     </div>
 </div>
-<div class="brand-carousel-wrapper">
+<!-- <div class="brand-carousel-wrapper">
         <div class="container">
             <div class="brand-carousel-one owl-theme owl-carousel">
                 <div class="item">
@@ -910,6 +910,6 @@ menu-active
                 </div>
             </div>
         </div>
-    </div>
+</div> -->
     
 {% endblock %}
