--- a/greensource_pages/templates/greensource_pages/services.html
+++ b/greensource_pages/templates/greensource_pages/services.html
@@ -78,7 +78,7 @@ menu-active
                         </div>
                     </div>
                     <div class="image-block">
-                        <img src="{% static 'images/Inverter.webp' %}" alt="inverter image" />
+                        <img src="{% static 'images/inverter.webp' %}" alt="inverter image" />
                         <div class="overlay">
                             <div class="box">
                                 <div class="content">
