--- a/templates/404.html
+++ b/templates/404.html
@@ -32,7 +32,7 @@
             </div>
             <div class="time col-xs-12 col-lg-2 col-md-6">
                 <p>
-                    <i class="fas fa-phone-alt"></i>+234 (8029442697)</p>
+                    <i class="fas fa-phone-alt"></i>(234)8029442697, (234)8076068609</p>
             </div>
             <div class="col-xs-12 col-lg-3 col-md-6">
                 <ol class="links">
